# pokemon_agent_backend

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_LINUX.md  main.py  pyproject.toml  uv.lock.backup
app/tools/: pokenmon_tool.py
configs/: openapi.yaml
docs/: API_USAGE.md  POKEMON_TOOL_README.md  architecture.md
openspec/: project.md
openspec/changes/add-fastapi-service-layer/: proposal.md  tasks.md
openspec/changes/add-fastapi-service-layer/specs/api-service/: spec.md
openspec/changes/upgrade-langchain-1.2.6/: design.md  proposal.md  tasks.md
openspec/changes/upgrade-langchain-1.2.6/specs/tooling/: spec.md
src/pokemon_agent/: __init__.py
src/pokemon_agent/api/: __init__.py  main.py
src/pokemon_agent/core/services/mcp_client/: __init__.py  pokemon_mcp_tool.py
src/pokemon_agent/core/services/web/cache/: __init__.py  web_cache.py
src/pokemon_agent/core/services/web/extraction/: __init__.py  llm_chains.py  pokemon_extractor.py
src/pokemon_agent/core/services/web/processing/: __init__.py  html_cleaner.py  text_processor.py  web_loader.py
src/pokemon_agent/core/tools/: __init__.py  pokemon_react_tool.py  pokemon_tool.py  time_out_tool.py
src/pokemon_agent/core/tools/sub_tools/: __init__.py  web_content_scraper.py  web_search.py
